# CopilotInfo

MidiRouter/: CMakeLists.txt  readme.md
MidiRouter/tests/: CMakeLists.txt
dockerinfo/: Dockerfile  readme.md
dockerinfo/scripts/: builddocker.zsh  rundocker.zsh  setghworkspace.zsh
